--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  packages: write
 
 jobs:
   release:
@@ -20,11 +21,12 @@ jobs:
         id: version
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,8 +37,8 @@ jobs:
           context: ./leargon-backend
           push: true
           tags: |
-            leargon/leargon-backend:${{ steps.version.outputs.VERSION }}
-            leargon/leargon-backend:latest
+            ghcr.io/leargon/leargon-backend:${{ steps.version.outputs.VERSION }}
+            ghcr.io/leargon/leargon-backend:latest
 
       - name: Build & push frontend image
         uses: docker/build-push-action@v6
@@ -44,8 +46,8 @@ jobs:
           context: ./leargon-frontend
           push: true
           tags: |
-            leargon/leargon-frontend:${{ steps.version.outputs.VERSION }}
-            leargon/leargon-frontend:latest
+            ghcr.io/leargon/leargon-frontend:${{ steps.version.outputs.VERSION }}
+            ghcr.io/leargon/leargon-frontend:latest
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
