- Made production ready - Fixed initial setup, where default language could not be selected - Fix, that you can only enter languages from ISO 639-1

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -61,7 +61,7 @@ services:
     networks:
       - leargon-network
     environment:
-      - VITE_API_URL=http://localhost:8081
+      - BACKEND_URL=http://backend:8080
 
 networks:
   leargon-network:
