--- a/leargon-backend/src/main/resources/db/changelog/changes/005-seed-supported-locales.yaml
+++ b/leargon-backend/src/main/resources/db/changelog/changes/005-seed-supported-locales.yaml
@@ -29,7 +29,7 @@ databaseChangeLog:
                   value: de
               - column:
                   name: display_name
-                  value: German
+                  value: Deutsch
               - column:
                   name: is_default
                   valueBoolean: false
