--- a/leargon-backend/src/main/resources/application.properties
+++ b/leargon-backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ liquibase.datasources.default.change-log=classpath:db/changelog/db.changelog-mas
 
 # CORS Configuration
 micronaut.server.cors.enabled=true
-micronaut.server.cors.configurations.web.allowedOrigins=http://localhost:3000,http://localhost:5173
+micronaut.server.cors.configurations.web.allowedOrigins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
 micronaut.server.cors.configurations.web.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
 micronaut.server.cors.configurations.web.allowedHeaders=Content-Type,Authorization
 micronaut.server.cors.configurations.web.allowCredentials=true
