--- a/leargon-frontend/Dockerfile
+++ b/leargon-frontend/Dockerfile
@@ -18,14 +18,21 @@ RUN npm run build
 # Runtime stage
 FROM nginx:alpine
 
+# Default backend URL
+ENV BACKEND_URL=http://localhost:8080
+
 # Copy built files to nginx
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy nginx config template
+COPY nginx.conf.template /etc/nginx/conf.d/default.conf.template
+
+# Copy entrypoint script
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 # Expose port 80
 EXPOSE 80
 
-# Start nginx
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
