--- a/leargon-backend/build.gradle
+++ b/leargon-backend/build.gradle
@@ -65,10 +65,10 @@ dependencies {
     testRuntimeOnly("com.h2database:h2")
 
     // E2E test dependencies (Testcontainers)
-    testImplementation("org.testcontainers:testcontainers:1.21.3")
-    testImplementation("org.testcontainers:mysql:1.21.3")
-    testImplementation("org.testcontainers:spock:1.21.3")
-    testRuntimeOnly("com.mysql:mysql-connector-j:8.4.0")
+    testImplementation("org.testcontainers:testcontainers:2.0.3")
+    testImplementation("org.testcontainers:testcontainers-mysql:2.0.3")
+    testImplementation("org.testcontainers:testcontainers-spock:2.0.3")
+    testRuntimeOnly("com.mysql:mysql-connector-j:9.3.0")
 }
 
 
