--- a/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/changes/005-seed-supported-locales.yaml
   - include:
       file: db/changelog/changes/006-create-process-tables.yaml
+  - include:
+      file: db/changelog/changes/007-add-process-diagram-tables.yaml
