--- a/leargon-frontend/package.json
+++ b/leargon-frontend/package.json
@@ -10,15 +10,18 @@
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "api:generate": "orval",
-    "api:watch": "orval --watch"
+    "api:watch": "orval --watch",
+    "test:e2e": "vitest run --config vitest.e2e.config.ts"
   },
   "dependencies": {
     "@azure/msal-browser": "^5.2.0",
+    "@dagrejs/dagre": "^2.0.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
     "@tanstack/react-query": "^5.62.0",
+    "@xyflow/react": "^12.10.1",
     "axios": "^1.7.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -26,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@testcontainers/mysql": "^11.12.0",
     "@types/node": "^25.3.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -35,7 +39,9 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^17.3.0",
     "orval": "^8.4.0",
+    "testcontainers": "^11.12.0",
     "typescript": "^5.7.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^4.0.18"
   }
 }
