Fixed Entra ID login (is using in-browser)

--- a/leargon-backend/build.gradle
+++ b/leargon-backend/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation("org.openapitools:jackson-databind-nullable:0.2.6")
 
     // JSON support (for version snapshots)
-    implementation("org.apache.groovy:groovy-json:4.0.30")
+    implementation("org.apache.groovy:groovy-json")
 
     // Retry support (for deadlock mitigation)
     implementation("io.micronaut:micronaut-retry")
