Added possibility to manage your organizational structure and connect processes to organizational units

--- a/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changes/006-create-process-tables.yaml
   - include:
       file: db/changelog/changes/007-add-process-diagram-tables.yaml
+  - include:
+      file: db/changelog/changes/008-create-organisational-unit-tables.yaml
