--- a/leargon-frontend/Dockerfile
+++ b/leargon-frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm ci --loglevel=error
 
 # Copy source code
 COPY . .
