--- a/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,3 +15,7 @@ databaseChangeLog:
       file: db/changelog/changes/007-add-process-diagram-tables.yaml
   - include:
       file: db/changelog/changes/008-create-organisational-unit-tables.yaml
+  - include:
+      file: db/changelog/changes/009-delete-unused-field-optional-from-classification.yaml
+  - include:
+      file: db/changelog/changes/010-add-classification-assignments-to-org-units.yaml
