* Removed unused fields * Added playwright tests * Added user stories to describe the application * Added roadmap without any priorities

--- a/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/leargon-backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -19,3 +19,5 @@ databaseChangeLog:
       file: db/changelog/changes/009-delete-unused-field-optional-from-classification.yaml
   - include:
       file: db/changelog/changes/010-add-classification-assignments-to-org-units.yaml
+  - include:
+      file: db/changelog/changes/011-remove-account-status-fields-from-users.yaml
