--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   e2e-tests:
-    name: E2E Tests
+    name: Integration & E2E Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -40,7 +40,15 @@ jobs:
         run: npm ci
         working-directory: leargon-frontend
 
-      - name: Run E2E tests
+      - name: Run integration tests
+        run: npm run test:integration
+        working-directory: leargon-frontend
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+        working-directory: leargon-frontend
+
+      - name: Run E2E tests (Playwright)
         run: npm run test:e2e
         working-directory: leargon-frontend
 
@@ -48,7 +56,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: e2e-test-results
+          name: test-results
           path: leargon-frontend/test-results/
           retention-days: 14
 
