--- a/leargon-frontend/package.json
+++ b/leargon-frontend/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "api:generate": "orval",
     "api:watch": "orval --watch",
-    "test:e2e": "vitest run --config vitest.e2e.config.ts"
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@azure/msal-browser": "^5.3.0",
@@ -43,6 +44,7 @@
     "testcontainers": "^11.12.0",
     "typescript": "^5.7.3",
     "vite": "^7.2.4",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "@playwright/test": "^1.50.0"
   }
 }
