--- a/leargon-backend/src/main/resources/application.properties
+++ b/leargon-backend/src/main/resources/application.properties
@@ -73,3 +73,8 @@ micronaut.server.netty.access-logger.logger-name=HTTP_ACCESS_LOG
 # Virtual Threads Configuration (Java 21)
 # Enables non-blocking I/O without requiring reactive code changes
 micronaut.server.thread-selection=AUTO
+
+# Hikari connection pool — reduced from default 10 to cut idle memory and connection overhead
+datasources.default.maximum-pool-size=5
+datasources.default.minimum-idle=2
+datasources.default.connection-timeout=20000
