--- a/leargon-frontend/package.json
+++ b/leargon-frontend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix --cache",
     "preview": "vite preview",
     "api:generate": "orval",
     "api:watch": "orval --watch",
